<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="?android:attr/actionModeFindDrawable"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/profile_home" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/camera"
        android:title="@string/camera_home" />
</menu>