...
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="emailAddress">Email</string>
    <string name="homePhone">Home Phone</string>
    <string name="cellPhone">Cell</string>
    <string name="service">Service</string>
    <string name="done">Done</string>
    <string-array name="ca_provinces">
        <item>MB</item>
        <item>AB</item>
        <item>BC</item>
        <item>ON</item>
        <item>NL</item>
...
