...
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="template 2"
                    app:layout_constraintBottom_toBottomOf="@+id/save_changes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/save_changes"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/save_changes"
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/descriptionHint">

                        <EditText
                            android:id="@+id/descriptionInput"
                            android:layout_width="413dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="What service do you provide?"
                            android:inputType="textPersonName"
...
